--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Picole quebrado | home</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Picole quebrado | home</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picolequebrado/"
-          ><img src="/imgs/icones/instagram.svg" alt="" srcset=""
-        /></a>
-        <a href="https://www.facebook.com/profile.php?id=100073004153898"
-          ><img src="/imgs/icones/facebook.svg" alt="" srcset=""
-        /></a>
-        <a href="tel:+5591982066009"
-          ><img src="/imgs/icones/whatsapp.svg" alt="" srcset=""
-        /></a>
-        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"
-          ><img src="/imgs/icones/youtube.svg" alt="" srcset=""
-        /></a>
+        <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+        <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
         <div>
@@ -50,11 +42,7 @@
     </div>
     <header class="menu">
       <nav>
-        <img
-          src="/imgs/icones/Picole Quebrado skateboard.svg"
-          alt=""
-          srcset=""
-        />
+        <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
         <ul>
           <li><a href="/paginas/sobre.html">sobre</a></li>
           <li><a href="/paginas/produtos.html">produtos</a></li>
@@ -63,109 +51,187 @@
       </nav>
     </header>
 
-    <section class="slide">
-      <img src="/imgs/fotos/daniel-lincoln.jpg" alt="" />
-      <img src="/imgs/fotos/oscar.jpg" alt="" />
-      <img src="/imgs/fotos/tom-morbey.jpg" alt="" />
-    </section>
-    <section class="lancamentos">
-      <h1>NOVOS SHAPES LANÇADOS</h1>
-      <div>
-        <img src="/imgs/produtos/graffiti.png" alt="" />
-        <img src="/imgs/produtos/camuflado.png" alt="" />
-        <img src="/imgs/produtos/MUROGRAFITTI 1.png" alt="" />
-      </div>
-    </section>
-    <section class="produtos">
-      <h1>Produtos</h1>
-      <div>
-        <img src="/imgs/produtos/Picole quebrado- akatsuki.png" alt="" />
-        <img src="/imgs/produtos/Rectangle 2.png" alt="" />
-        <img src="/imgs/produtos/camuflado.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- muro.jpg" alt="" />
-        <img src="/imgs/produtos/graffiti.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- akatsuki.png" alt="" />
-        <img src="/imgs/produtos/MUROGRAFITTI 1.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- muro.jpg" alt="" />
-        <img src="/imgs/produtos/Rectangle 2.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- akatsuki.png" alt="" />
-        <img src="/imgs/produtos/Rectangle 2.png" alt="" />
-        <img src="/imgs/produtos/camuflado.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- muro.jpg" alt="" />
-        <img src="/imgs/produtos/graffiti.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- akatsuki.png" alt="" />
-        <img src="/imgs/produtos/MUROGRAFITTI 1.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- muro.jpg" alt="" />
-        <img src="/imgs/produtos/Rectangle 2.png" alt="" />
-        <img src="/imgs/produtos/Picole quebrado- muro.jpg" alt="" />
-        <img src="/imgs/produtos/graffiti.png" alt="" />
-      </div>
-    </section>
+  </div>
 
-    <footer>
-      <div class="footer">
-        <div class="dados-enderecos">
-          <div>
-            <h3>INSTITUCIONAL</h3>
-            <ul>
-              <li>Sobre a Empresa</li>
-              <li>Termos & Condições</li>
-            </ul>
-          </div>
-          <div>
-            <h3>DÚVIDAS?</h3>
-            <ul>
-              <li>Fale Conosco</li>
-              <li>Política de Privacidade</li>
-              <li>Trocas e Devoluções</li>
-            </ul>
-            <div>
-              <h3>ATENDIMENTO</h3>
-              <ul>
-                <li>Central de Atendimento</li>
-              </ul>
-            </div>
-          </div>
+  <section class="slide">
+    <img src="/imgs/fotos/daniel-lincoln.jpg" alt="" />
+    <img src="/imgs/fotos/oscar.jpg" alt="" />
+    <img src="/imgs/fotos/tom-morbey.jpg" alt="" />
+  </section>
+  <section class="lancamentos">
+    <h1>NOVOS SHAPES LANÇADOS</h1>
+    <div>
+      <img src="/imgs/produtos/graffiti.png" alt="" />
+      <img src="/imgs/produtos/camuflado.png" alt="" />
+      <img src="/imgs/produtos/MUROGRAFITTI 1.png" alt="" />
+    </div>
+  </section>
+  <section class="produtos">
+    <h1>Produtos</h1>
+    <div class="cards">
+      <div class="shape cards-item">
+        <h1>Shape</h1>
+        <img src="/imgs/shape.jfif" alt="" srcset="">
+        <div class="price">
+          <p>marfim</p>
+          <span>R$ 29,00</span>
         </div>
-        <div class="logo-endereco">
-          <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
-          <ul class="endereco">
-            <li>avenida fernandoguilhon, 173</li>
-            <li>Mercado Municipal de Marituba</li>
-            <li>MARITUBA - PA</li>
-            <li>CEP: 67200-000</li>
-            <li>TEL: (91) 98206-6009</li>
+      </div>
+      <div class="shape cards-item">
+        <h1>Shape</h1>
+        <img src="/imgs/shape.jfif" alt="" srcset="">
+        <div class="price">
+          <p>marfim</p>
+          <span>R$ 29,00</span>
+        </div>
+      </div>
+      <div class="shape cards-item">
+        <h1>Shape</h1>
+        <img src="/imgs/shape.jfif" alt="" srcset="">
+        <div class="price">
+          <p>marfim</p>
+          <span>R$ 29,00</span>
+        </div>
+      </div>
+      <div class="rolamento cards-item">
+        <h1>rolamento</h1>
+        <img src="/imgs/bones.jfif" alt="" srcset="">
+        <div class="price">
+          <p>abec 9</p>
+          <span>R$ 40,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+      <div class="truck cards-item">
+        <h1>truck</h1>
+        <img src="/imgs/truck.jfif" alt="" srcset="">
+        <div class="price">
+          <p>vazado</p>
+          <span>R$ 189,00</span>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <div class="dados-enderecos">
+        <div>
+          <h3>INSTITUCIONAL</h3>
+          <ul>
+            <li>Sobre a Empresa</li>
+            <li>Termos & Condições</li>
           </ul>
         </div>
         <div>
-          <ul class="midias-footer">
-            <li>siga-nos</li>
-            <li>
-              <a href="https://www.instagram.com/picolequebrado/"
-                ><img src="/imgs/icones/instagram.svg" alt="" srcset=""
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/profile.php?id=100073004153898"
-                ><img src="/imgs/icones/facebook.svg" alt="" srcset=""
-              /></a>
-            </li>
-            <li>
-              <a href="tel:+5591982066009"
-                ><img src="/imgs/icones/whatsapp.svg" alt="" srcset=""
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"
-                ><img src="/imgs/icones/youtube.svg" alt="" srcset=""
-              /></a>
-            </li>
+          <h3>DÚVIDAS?</h3>
+          <ul>
+            <li>Fale Conosco</li>
+            <li>Política de Privacidade</li>
+            <li>Trocas e Devoluções</li>
           </ul>
+          <div>
+            <h3>ATENDIMENTO</h3>
+            <ul>
+              <li>Central de Atendimento</li>
+            </ul>
+          </div>
         </div>
       </div>
-      <p class="direitos">
-        © TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD
-      </p>
-    </footer>
-  </body>
+      <div class="logo-endereco">
+        <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
+        <ul class="endereco">
+          <li>avenida fernandoguilhon, 173</li>
+          <li>Mercado Municipal de Marituba</li>
+          <li>MARITUBA - PA</li>
+          <li>CEP: 67200-000</li>
+          <li>TEL: (91) 98206-6009</li>
+        </ul>
+      </div>
+      <div>
+        <ul class="midias-footer">
+          <li>siga-nos</li>
+          <li>
+            <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+          </li>
+          <li>
+            <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <p class="direitos">© TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD</p>
+  </footer>
+</body>
+
 </html>
