--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -63,6 +63,188 @@
         </ul>
       </nav>
     </header>
+    <section class="produtos">
+      <h1>Produtos</h1>
+      <div class="cards">
+        <div class="shape cards-item">
+          <h1>Picolé Quebrado</h1>
+          <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 167,90</span>
+          </div>
+        </div>
+        <div class="shape cards-item">
+          <h1>Picolé Quebrado</h1>
+          <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 167,90</span>
+          </div>
+        </div><div class="shape cards-item">
+          <h1>Picolé Quebrado</h1>
+          <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 167,90</span>
+          </div>
+        </div>
+        <div class="shape cards-item">
+          <h1>Anti Action</h1>
+          <img src="/imgs/produtos/shapes/anti.jpg" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 109,90</span>
+          </div>
+        </div>
+        <div class="shape cards-item">
+          <h1>Anti Action</h1>
+          <img src="/imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 109,90</span>
+          </div>
+        </div>
+        <div class="shape cards-item">
+          <h1>Anti Action</h1>
+          <img src="/imgs/produtos/shapes/maryjane.jpg" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 109,90</span>
+          </div>
+        </div>
+        <div class="rolamento cards-item">
+          <h1>Anti Action</h1>
+          <img src="/imgs/produtos/shapes/sistem.jpg" alt="" srcset="">
+          <div class="price">
+            <p>marfim</p>
+            <span>R$ 109,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Skate montado</h1>
+          <img src="/imgs/produtos/shapes/skatemontado.jpg" alt="" srcset="">
+          <div class="price">
+            <p>Semi Profissional</p>
+            <span>R$ 341,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Parafuso de base</h1>
+          <img src="/imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
+          <div class="price">
+            <p>com chave</p>
+            <span>R$ 27,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Amortecedor</h1>
+          <img src="/imgs/produtos/amortecedor/amortecedor.jpg" alt="" srcset="">
+          <div class="price">
+            <p>kit completo</p>
+            <span>R$ 35,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Amortecedor</h1>
+          <img src="/imgs/produtos/amortecedor/amortecedo.jpg" alt="" srcset="">
+          <div class="price">
+            <p>kit completo</p>
+            <span>R$ 35,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Amortecedor</h1>
+          <img src="/imgs/produtos/amortecedor/amoretecedores.jpg" alt="" srcset="">
+          <div class="price">
+            <p>kit completo</p>
+            <span>R$ 35,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Rolamento abec 9</h1>
+          <img src="/imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
+          <div class="price">
+            <p>kit com 8</p>
+            <span>R$ 45,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Rolamento abec 9</h1>
+          <img src="/imgs/produtos/rolamento/abecs.jpg" alt="" srcset="">
+          <div class="price">
+            <p>kit com 8</p>
+            <span>R$ 45,90</span>
+          </div>
+  
+        </div><div class="truck cards-item">
+          <h1>Rolamento abec 9</h1>
+          <img src="/imgs/produtos/rolamento/abec9s.jpg" alt="" srcset="">
+          <div class="price">
+            <p>kit com 8</p>
+            <span>R$ 45,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Rolamento Bones Reds</h1>
+          <img src="/imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
+          <div class="price">
+            <p>BIG BILLS</p>
+            <span>R$ 145,90</span>
+          </div>
+  
+        </div>
+        <div class="truck cards-item">
+          <h1>Rolamento Bones Reds</h1>
+          <img src="/imgs/produtos/rolamento/bonesred.jpg" alt="" srcset="">
+          <div class="price">
+            <p>BONES REDS</p>
+            <span>R$ 145,90</span>
+          </div>
+  
+        </div><div class="truck cards-item">
+          <h1>Rolamento Bones Super</h1>
+          <img src="/imgs/produtos/rolamento/bonessuper.jpg" alt="" srcset="">
+          <div class="price">
+            <p>SUPER</p>
+            <span>R$ 145,90</span>
+          </div>
+  
+        </div><div class="truck cards-item">
+          <h1>Rolamento Bones Swiss</h1>
+          <img src="/imgs/produtos/rolamento/bonesswiiss.gif" alt="" srcset="">
+          <div class="price">
+            <p>SWISS</p>
+            <span>R$ 151,90</span>
+          </div>
+  
+        </div><div class="truck cards-item">
+          <h1>Rolamento Independent</h1>
+          <img src="/imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
+          <div class="price">
+            <p>INDEPENDENT</p>
+            <span>R$ 155,90</span>
+          </div>
+  
+        </div><div class="truck cards-item">
+          <h1>Rolamento Spitfire</h1>
+          <img src="/imgs/produtos/rolamento/spitfireclassics.png" alt="" srcset="">
+          <div class="price">
+            <p>CLASSICS</p>
+            <span>R$ 160,90</span>
+          </div>
+  
+        
+      </div>
+    </section>
     <footer>
       <div class="footer">
         <div class="dados-enderecos">
