--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <section class="slide">
     <img src="/imgs/fotos/daniel-lincoln.jpg" alt="" />
-    <img src="/imgs/fotos/oscar.jpg" alt="" />
+    <img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" />
     <img src="/imgs/fotos/tom-morbey.jpg" alt="" />
   </section>
   <section class="lancamentos">
@@ -84,7 +84,8 @@
           <p>marfim</p>
           <span>R$ 167,90</span>
         </div>
-      </div><div class="shape cards-item">
+      </div>
+      <div class="shape cards-item">
         <h1>Picolé Quebrado</h1>
         <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" srcset="">
         <div class="price">
@@ -187,7 +188,8 @@
           <span>R$ 45,90</span>
         </div>
 
-      </div><div class="truck cards-item">
+      </div>
+      <div class="truck cards-item">
         <h1>Rolamento abec 9</h1>
         <img src="/imgs/produtos/rolamento/abec9s.jpg" alt="" srcset="">
         <div class="price">
@@ -213,7 +215,8 @@
           <span>R$ 145,90</span>
         </div>
 
-      </div><div class="truck cards-item">
+      </div>
+      <div class="truck cards-item">
         <h1>Rolamento Bones Super</h1>
         <img src="/imgs/produtos/rolamento/bonessuper.jpg" alt="" srcset="">
         <div class="price">
@@ -221,7 +224,8 @@
           <span>R$ 145,90</span>
         </div>
 
-      </div><div class="truck cards-item">
+      </div>
+      <div class="truck cards-item">
         <h1>Rolamento Bones Swiss</h1>
         <img src="/imgs/produtos/rolamento/bonesswiiss.gif" alt="" srcset="">
         <div class="price">
@@ -229,7 +233,8 @@
           <span>R$ 151,90</span>
         </div>
 
-      </div><div class="truck cards-item">
+      </div>
+      <div class="truck cards-item">
         <h1>Rolamento Independent</h1>
         <img src="/imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
         <div class="price">
@@ -237,7 +242,8 @@
           <span>R$ 155,90</span>
         </div>
 
-      </div><div class="truck cards-item">
+      </div>
+      <div class="truck cards-item">
         <h1>Rolamento Spitfire</h1>
         <img src="/imgs/produtos/rolamento/spitfireclassics.png" alt="" srcset="">
         <div class="price">
@@ -245,8 +251,8 @@
           <span>R$ 160,90</span>
         </div>
 
-      
-    </div>
+
+      </div>
   </section>
 
   <footer>
