--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -1,133 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Picole quebrado | sobre</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/sobre.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="dados-do-topo">
-      <div class="icons">
-        <a href="https://www.instagram.com/picolequebrado/"
-          ><img src="/imgs/icones/instagram.svg" alt="" srcset=""
-        /></a>
-        <a href="https://www.facebook.com/profile.php?id=100073004153898"
-          ><img src="/imgs/icones/facebook.svg" alt="" srcset=""
-        /></a>
-        <a href="tel:+5591982066009"
-          ><img src="/imgs/icones/whatsapp.svg" alt="" srcset=""
-        /></a>
-        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"
-          ><img src="/imgs/icones/youtube.svg" alt="" srcset=""
-        /></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Picole quebrado | sobre</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/sobre.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="dados-do-topo">
+    <div class="icons">
+      <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+      <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+      <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+      <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+    </div>
+    <div class="icons">
+      <div>
+        <img src="/imgs/icones/localizacao.svg" alt="" />
+        <p>onde estamos</p>
       </div>
-      <div class="icons">
-        <div>
-          <img src="/imgs/icones/localizacao.svg" alt="" />
-          <p>onde estamos</p>
-        </div>
-        <div>
-          <img src="/imgs/icones/email.svg" alt="" />
-          <p>picolequebrado@gmail.com</p>
-        </div>
-        <div>
-          <img src="/imgs/icones/whatsapp.svg" alt="" />
-          <p>(91) 98206-6009</p>
-        </div>
-        <div>
-          <img src="/imgs/icones/telefone.svg" alt="" />
-          <p>(94) 99174-6944</p>
-        </div>
+      <div>
+        <img src="/imgs/icones/email.svg" alt="" />
+        <p>picolequebrado@gmail.com</p>
+      </div>
+      <div>
+        <img src="/imgs/icones/whatsapp.svg" alt="" />
+        <p>(91) 98206-6009</p>
+      </div>
+      <div>
+        <img src="/imgs/icones/telefone.svg" alt="" />
+        <p>(94) 99174-6944</p>
       </div>
     </div>
-    <header class="menu">
-      <nav>
-        <img
-          src="/imgs/icones/Picole Quebrado skateboard.svg"
-          alt=""
-          srcset=""
-        />
-        <ul>
-          <li><a href="/index.html">home</a></li>
-          <li><a href="/paginas/produtos.html">produtos</a></li>
-          <li><a href="/paginas/contato.html">contatos</a></li>
-        </ul>
-      </nav>
-    </header>
+  </div>
+  <header class="menu">
+    <nav>
+      <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+      <ul>
+        <li><a href="/index.html">home</a></li>
+        <li><a href="/paginas/produtos.html">produtos</a></li>
+        <li><a href="/paginas/contato.html">contatos</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="sobre">
+    <div class="historia">
+      <h3>Historia da marca</h3>
+      <p> Porquê Picolé Quebrado
+        O nome veio de muitos anos atrás quando andávamos de skate na escola Fernando Ferrari, cituada em Marituba, cidade Metropolitana de Belém do Pará.
+      </p>
+      <p>Andávamos em uma Quadra no fundo da escola e sempre que acabávamos a sessão, saíamos para a sorveteria que fica ao lado da escola, quando íamos comprar os picolés sempre pedíamos os quebrados pois custavam muito menos que os inteiros, e daí depois de muitos anos tivemos a idéia de criar a marca.</p>
+    </div>
+    <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="">
+    <img src="/imgs/fotos/picolé quebrado 1 (1).png" alt="">
+    <div>
+      <h3>Criação</h3>
+      <h4>Homenagem</h4>
+      <p>Quando decidimos criar a marca foi em homenagem a um grande amigo que nos deixou.
+      </p>
+      <p>Então entre o final de 2019 e o começo de 2020. Reunimos cinco amigos e criamos a Picolé Quebrado Skateboard, contribuindo para o futuro do skateboard em Marituba.
+      </p>
+      <p>Os Sócios e Fundadores da Picolé quebrado são:
+      </p>
+      <p>Daniel Latino, Nino Cara de Gato,
+        wesley Gnomo, Visagem, Horácio.</p>
+    </div>
+  </section>
+  <section class="videos-conteiner">
+    <h3>Videos de skate, Maritubense !!</h3>
+    <div class="videos">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/5a3LPPui6yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eSmSakvcXqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/tjY9-GncZbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Jk_ImJ-6CIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <footer>
-      <div class="footer">
-        <div class="dados-enderecos">
-          <div>
-            <h3>INSTITUCIONAL</h3>
-            <ul>
-              <li>Sobre a Empresa</li>
-              <li>Termos & Condições</li>
-            </ul>
-          </div>
-          <div>
-            <h3>DÚVIDAS?</h3>
-            <ul>
-              <li>Fale Conosco</li>
-              <li>Política de Privacidade</li>
-              <li>Trocas e Devoluções</li>
-            </ul>
-            <div>
-              <h3>ATENDIMENTO</h3>
-              <ul>
-                <li>Central de Atendimento</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="logo-endereco">
-          <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
-          <ul class="endereco">
-            <li>avenida fernandoguilhon, 173</li>
-            <li>Mercado Municipal de Marituba</li>
-            <li>MARITUBA - PA</li>
-            <li>CEP: 67200-000</li>
-            <li>TEL: (91) 98206-6009</li>
+
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <div class="dados-enderecos">
+        <div>
+          <h3>INSTITUCIONAL</h3>
+          <ul>
+            <li>Sobre a Empresa</li>
+            <li>Termos & Condições</li>
           </ul>
         </div>
         <div>
-          <ul class="midias-footer">
-            <li>siga-nos</li>
-            <li>
-              <a href="https://www.instagram.com/picolequebrado/"
-                ><img src="/imgs/icones/instagram.svg" alt="" srcset=""
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/profile.php?id=100073004153898"
-                ><img src="/imgs/icones/facebook.svg" alt="" srcset=""
-              /></a>
-            </li>
-            <li>
-              <a href="tel:+5591982066009"
-                ><img src="/imgs/icones/whatsapp.svg" alt="" srcset=""
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"
-                ><img src="/imgs/icones/youtube.svg" alt="" srcset=""
-              /></a>
-            </li>
+          <h3>DÚVIDAS?</h3>
+          <ul>
+            <li>Fale Conosco</li>
+            <li>Política de Privacidade</li>
+            <li>Trocas e Devoluções</li>
           </ul>
+          <div>
+            <h3>ATENDIMENTO</h3>
+            <ul>
+              <li>Central de Atendimento</li>
+            </ul>
+          </div>
         </div>
       </div>
-      <p class="direitos">
-        © TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD
-      </p>
-    </footer>
-  </body>
+      <div class="logo-endereco">
+        <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
+        <ul class="endereco">
+          <li>avenida fernandoguilhon, 173</li>
+          <li>Mercado Municipal de Marituba</li>
+          <li>MARITUBA - PA</li>
+          <li>CEP: 67200-000</li>
+          <li>TEL: (91) 98206-6009</li>
+        </ul>
+      </div>
+      <div>
+        <ul class="midias-footer">
+          <li>siga-nos</li>
+          <li>
+            <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+          </li>
+          <li>
+            <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <p class="direitos">
+      © TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD
+    </p>
+  </footer>
+</body>
+
 </html>
