--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
-        <div>
+        <div class="local">
           <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
           <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
             <p>onde estamos</p>
           </a>
         </div>
-        <div>
+        <div class="email-topo">
           <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
           <a href="mailto:picolequebradoskateboard@gmail.com">
             <p>picolequebradoskateboard@gmail.com</p>
@@ -99,6 +99,14 @@
         <div class="price">
           <p>marfim</p>
           <span>R$ 167,90</span>
+        </div>
+      </div>
+      <div class="shape cards-item">
+        <h1>Boné Picolé Quebrado</h1>
+        <img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" srcset="">
+        <div class="price">
+          <p>telado</p>
+          <span>R$ 45,90</span>
         </div>
       </div>
       <div class="shape cards-item">
