--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -13,40 +13,41 @@
 </head>
 
 <body>
-  <div class="dados-do-topo">
-    <div class="icons">
-      <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
-      <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
-      <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
-      <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+  <div class="top-dados-menu">
+    <div class="dados-do-topo">
+      <div class="icons">
+        <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+        <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+      </div>
+      <div class="icons">
+        <div class="local">
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
+            <p>onde estamos</p>
+          </a>
+        </div>
+        <div class="email-topo">
+          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com">
+            <p>picolequebradoskateboard@gmail.com</p>
+          </a>
+        </div>
+        <div>
+          <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="tel:+5591982066009">
+            <p>(91) 98206-6009</p>
+          </a>
+        </div>
+        <div>
+          <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="tel:+5594991746944">
+            <p>(94) 99174-6944</p>
+          </a>
+        </div>
+      </div>
     </div>
-    <div class="icons">
-      <div>
-        <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
-        <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
-          <p>onde estamos</p>
-        </a>
-      </div>
-      <div>
-        <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
-        <a href="mailto:picolequebradoskateboard@gmail.com">
-          <p>picolequebradoskateboard@gmail.com</p>
-        </a>
-      </div>
-      <div>
-        <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
-        <a href="tel:+5591982066009">
-          <p>(91) 98206-6009</p>
-        </a>
-      </div>
-      <div>
-        <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
-        <a href="tel:+5594991746944">
-          <p>(94) 99174-6944</p>
-        </a>
-      </div>
-    </div>
-  </div>
   <header class="menu">
     <nav>
       <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
