--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap" rel="stylesheet" />
+  <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -60,12 +61,24 @@
     </header>
 
   </div>
-
-  <section class="slide">
-    <img src="/imgs/fotos/daniel-lincoln.jpg" alt="" />
-    <img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" />
-    <img src="/imgs/fotos/tom-morbey.jpg" alt="" />
-  </section>
+  <div data-slide="principal">
+    <ul class="slide">
+      <li><img src="/imgs/fotos/daniel-lincoln.jpg" alt="" /></li>
+      <li><img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/tom-morbey.jpg" alt="" /></li>
+    </ul>
+    <ul class="slide">
+      <li><img src="/imgs/fotos/oscar.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/niket-nigde-9N3rS-xLfkI-unsplash.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/alexander-londono-MAe6R6siGYQ-unsplash.jpg" alt="" /></li>
+    </ul>
+    <ul class="slide">
+      <li><img src="/imgs/fotos/daniel-lincoln-Sj87XsPs4b4-unsplash.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/yeshi-kangrang-8diGsOyqwHQ-unsplash.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos//alexander-londono-ApPIboUsOOY-unsplash.jpg" alt="" /></li>
+    </ul>
+  </div>
+    
   <section class="lancamentos">
     <h1>NOVOS SHAPES LANÇADOS</h1>
     <div>
@@ -326,6 +339,9 @@
     </div>
     <p class="direitos">© TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD</p>
   </footer>
+  
+	<script src="/javascript/simple-slide.js"></script>
+  <script src="/javascript/script.js"></script>
 </body>
 
 </html>
