--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
   <section class="lancamentos">
     <h1>NOVOS SHAPES LANÇADOS</h1>
     <div>
-      <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" />
-      <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" />
-      <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" />
+      <img src="/imgs/produtos/shapes/graffiti.png" alt="" />
+      <img src="/imgs/produtos/shapes/camuflado.png" alt="" />
+      <img src="/imgs/produtos/shapes/MUROGRAFITTI.png" alt="" />
     </div>
   </section>
   <section class="produtos">
