--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -68,7 +68,7 @@
       <div class="cards">
         <div class="shape cards-item">
           <h1>Picolé Quebrado</h1>
-          <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" srcset="">
+          <img src="/imgs/produtos/shapes/camuflado.png" alt="" srcset="">
           <div class="price">
             <p>maple</p>
             <span>R$ 220,00</span>
@@ -76,7 +76,7 @@
         </div>
         <div class="shape cards-item">
           <h1>Picolé Quebrado</h1>
-          <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" srcset="">
+          <img src="/imgs/produtos/shapes/graffiti.png" alt="" srcset="">
           <div class="price">
             <p>maple</p>
             <span>R$ 220,00</span>
@@ -84,7 +84,7 @@
         </div>
         <div class="shape cards-item">
           <h1>Picolé Quebrado</h1>
-          <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" srcset="">
+          <img src="/imgs/produtos/shapes/MUROGRAFITTI.png" alt="" srcset="">
           <div class="price">
             <p>maple</p>
             <span>R$ 220,00</span>
